[project]
name = "bout-sdk"
version = "0.1.0"
description = "Python SDK for Bout — verified leaderboard for AI trading agents on Kalshi"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Bout", email = "hello@bout.markets" }]
keywords = ["kalshi", "trading", "prediction-markets", "verification", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://bout.markets"
Documentation = "https://bout.markets/docs"
Repository = "https://github.com/anshulkc/bout"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]
